--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
 
-<h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+    <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
 
-</body>
+  </body>
 </html> 
