--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-
     <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
-
+    <p>And here is some quality content</p>
   </body>
 </html> 
