--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   </head>
   <body>
     <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
-    <p>And here is some quality content</p>
+    <p>And here is some quality P-content</p>
+    <div> 
+      <ol>
+        <li>Vodka</li>
+        <li>Beer</li>
+      </ol>
+      <ul>
+        <li>Balalaika</li>
+        <li>Accordion</li>
+      </ul>
+    </div>
   </body>
 </html> 
