--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
-    <p>And here is some quality P-content</p>
+    <p>And here is some quality P-content.</p>
     <div> 
       <ol>
         <li>Vodka</li>
