--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   </head>
   <body>
     <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
-    <p>And here is some quality P-content.</p>
+    <p>Riston markkinointisuunnitelma.</p>
     <div> 
       <ol>
-        <li>Vodka</li>
-        <li>Beer</li>
+        <li>FESE</li>
+        <li>Ig</li>
       </ol>
       <ul>
-        <li>Balalaika</li>
-        <li>Accordion</li>
+        <li>Eumer</li>
+        <li>Verohallinnon some</li>
       </ul>
     </div>
   </body>
