--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+    <h1>Etäjorma.</h1>
     <p>Riston markkinointisuunnitelma.</p>
     <div> 
       <ol>
