--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <title>Etäilyä ja jormailua</title>
   </head>
   <body>
     <h1>Etäjorma.</h1>
