--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="fi">
+<!DOCTYPE html lang="fi">
   <head>
     <link rel="stylesheet" href="styles.css">
     <title>Etäilyä ja jormailua</title>
