--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html lang="fi">
+<!DOCTYPE html>
   <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Etäilyä ja jormailua</title>
+    <title>Post-corona party planner</title>
   </head>
   <body>
-    <h1>Etäjorma.</h1>
-    <p>Riston markkinointisuunnitelma.</p>
+    <h1>Shoplist for party</h1>
+    <p>What to buy.</p>
     <div> 
       <ol>
-        <li>FESE</li>
-        <li>Ig</li>
+        <li>vodka</li>
+        <li>Beer</li>
       </ol>
       <ul>
-        <li>Eumer</li>
-        <li>Verohallinnon some</li>
+        <li>Balalaika</li>
+        <li>Accordion</li>
       </ul>
     </div>
   </body>
