--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Shoplist for party</h1>
     <p>What to buy.</p>
-    <div>First things first 
+    <div class="borders">
       <ol>
         <li>vodka</li>
         <li>Beer</li>
