--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
+<img src="fishies.gif">
   <head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Post-corona party planner</title>
+    <title>Etäilyä ja jormailua</title>
   </head>
   <body>
-    <h1>Shoplist for party</h1>
-    <p>What to buy.</p>
+    <h1>Mutta mikä on ET-jorma</h1>
+    <p>Etäjormailun alkeet</p>
     <div class="borders">
       <ol>
-        <li>vodka</li>
-        <li>Beer</li>
+        <li>Kukkis</li>
+        <li>Etäduuni</li>
       </ol>
       <ul>
-        <li>Balalaika</li>
-        <li>Accordion</li>
+        <li>Ahven</li>
+        <li>Häijy hauki</li>
       </ul>
     </div>
   </body>
