--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<img src="fishies.gif">
+<img src="fishies.gif" width="200">
   <head>
     <title>Etäilyä ja jormailua</title>
   </head>
