--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>Balalaika</li>
         <li>Accordion</li>
       </ul>
+      <a href="second.html">Check the remote work project</a> 
     </div>
   </body>
 </html> 
