--- a/second.html
+++ b/second.html
@@ -4,7 +4,7 @@
     <title>Etäilyä ja jormailua</title>
   </head>
   <body>
-    <h1>Mutta mikä on ET-jorma</h1>
+    <h1>Post-corona työt</h1>
     <p>Etäjormailun alkeet</p>
     <div class="borders">
       <ol>
