--- a/second.html
+++ b/second.html
@@ -15,7 +15,7 @@
         <li>Ahven</li>
         <li>Häijy hauki</li>
       </ul>
-      <a href="/">Home</a>
+      <a href="https://jenttila.github.io/project/">Back to square one</a>
     </div>
   </body>
 </html> 
