--- a/second.html
+++ b/second.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <img src="fishies.gif" width="200">
+<link rel="stylesheet" href="styles.css">
   <head>
     <title>Etäilyä ja jormailua</title>
   </head>
