--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Post-corona party planner</title>
   </head>
   <body>
-    <img src="coronaparty.GIF" width="200">
+    <img src="coronaparty.gif" width="200">
     <h1>Shoplist for party</h1>
     <p>What to buy.</p>
     <div class="borders">
