--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>Post-corona party planner</title>
   </head>
   <body>
-    <img src="coronaparty.GIF">
+    <figure>
+      <img src="coronaparty.GIF" alt="woman and cat corona meme" />
+      <figcaption>Miscommunication in the time of corona</figcaption>
+    </figure>
     <h1>Shoplist for party</h1>
     <p>What to buy.</p>
     <div class="borders">
