--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       </ul>
       <a href="second.html">Check the remote work project</a> 
     </div>
+    <progress value="22" max="100"></progress>
   </body>
 </html> 
