--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <img src="coronaparty.GIF" alt="woman and cat corona meme" />
       <figcaption>Miscommunication in the time of corona</figcaption>
     </figure>
-    <h1>Shoplist for party</h1>
+    <h1 class="h1">Shoplist for party</h1>
     <p>What to buy.</p>
     <div class="borders">
       <ol>
