--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <figcaption>Miscommunication in the time of corona</figcaption>
     </figure>
     <h1 class="borders" class="headings">Shoplist for party</h1>
-    <p>What to buy.</p>
+    <p class="borders">What to buy.</p>
     <div class="borders">
       <ol>
         <li>vodka</li>
