--- a/second.html
+++ b/second.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Post-corona työt</h1>
-    <p>Etäjormailun alkeet</p>
+    <p class="borders">Etäjormailun alkeet</p>
     <div class="borders">
       <ol>
         <li>Kukkis</li>
