--- a/second.html
+++ b/second.html
@@ -5,8 +5,8 @@
     <title>Etäilyä ja jormailua</title>
   </head>
   <body>
-    <h1>Post-corona työt</h1>
-    <p class="borders">Etäjormailun alkeet</p>
+    <h1 class="borders">Post-corona työt</h1>
+    <p>Etäjormailun alkeet</p>
     <div class="borders">
       <ol>
         <li>Kukkis</li>
