--- a/second.html
+++ b/second.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <html lang="en">
 <img src="fishies.gif" width="200">
 <link rel="stylesheet" href="styles.css">
   <head>
