--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-<!DOCTYPE html> <html lang="en">
-  <head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Post-corona party planner</title>
-  </head>
+<!DOCTYPE html> 
+<html lang="en">
+<head>
+<link rel="stylesheet" href="styles.css">
+<title>Post-corona party planner</title>
+</head>
+<header>
+  <h1 class="headings">Life after corona</h1>
+</header>
+<nav></nav>
+<section></section>
+<article></article>
+<aside></aside>
+<footer></footer>
+  
   <body>
     <figure>
       <img src="coronaparty.GIF" alt="woman and cat corona meme" />
       <figcaption>Miscommunication in the time of corona</figcaption>
     </figure>
-    <h1 class="headings">Shoplist for party</h1>
+
     <p class="borders">What to buy.</p>
     <div class="borders">
       <ol>
