--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Post-corona party planner</title>
 </head>
 <header>
-  <h1 class="headings">Life after corona</h1>
+  <h1>Life after corona</h1>
 </header>
 <nav></nav>
 <section></section>
