--- a/index.html
+++ b/index.html
@@ -7,18 +7,12 @@
 <header>
   <h1>Life after corona</h1>
 </header>
-<nav></nav>
-<section></section>
-<article></article>
-<aside></aside>
-<footer></footer>
-  
-  <body>
-    <figure>
-      <img src="coronaparty.GIF" alt="woman and cat corona meme" />
-      <figcaption>Miscommunication in the time of corona</figcaption>
-    </figure>
-
+<nav>
+<a href="index.html">Home Page</a>
+<a href="second.html">Work after corona</a>  
+</nav>
+<body>
+  <section>
     <p class="borders">What to buy.</p>
     <div class="borders">
       <ol>
@@ -32,5 +26,14 @@
       <a href="second.html">Check the remote work project</a> 
       <progress value="50" max="100"></progress>
     </div>
-  </body>
+  </section>
+<article></article>
+  <aside>
+    <figure>
+      <img src="coronaparty.GIF" alt="woman and cat corona meme" />
+      <figcaption>Miscommunication in the time of corona</figcaption>
+    </figure>
+  </aside>
+<footer>Here's the Footer and it's awesome</footer>
+</body>
 </html> 
