--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <a href="second.html">Work after corona</a>  
 </nav>
   <section>
+    <h2>partyplanner's checklist</h2>
     <p class="borders">What to buy.</p>
     <div class="borders">
       <ol>
@@ -27,7 +28,9 @@
       <progress value="50" max="100"></progress>
     </div>
   </section>
-<article></article>
+  <article>
+    <h2>Facts about post-corona life</h2>  
+  </article>
   <aside>
     <figure>
       <img src="coronaparty.GIF" alt="woman and cat corona meme" />
