--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <header>
   <h1>Life after corona</h1>
 </header>
-<nav>
+<nav id="nav">
 <a href="index.html">Home Page</a>
 <a href="second.html">Work after corona</a>  
 </nav>
-  <section>
+  <section id="section">
     <h2>partyplanner's checklist</h2>
     <p class="borders">What to buy.</p>
     <div class="borders">
@@ -28,15 +28,15 @@
       <progress value="50" max="100"></progress>
     </div>
   </section>
-  <article>
+  <article id="article">
     <h2>Facts about post-corona life</h2>  
   </article>
-  <aside>
+  <aside id="aside">
     <figure>
       <img src="coronaparty.GIF" alt="woman and cat corona meme" />
       <figcaption>Miscommunication in the time of corona</figcaption>
     </figure>
   </aside>
-<footer>Here's the Footer and it's awesome</footer>
+<footer id="footer">Here's the Footer and it's awesome</footer>
 </body>
 </html> 
