--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </div>
   </section>
   <article id="article">
-    <h2>Facts about post-corona life</h2>  
+    <h2>Facts about post-corona life</h2>
+    <p>It is going to be AWESOME</p>
   </article>
   <aside id="aside">
     <figure>
