--- a/third.html
+++ b/third.html
@@ -24,8 +24,6 @@
         <li>Balalaika</li>
         <li>Accordion</li>
       </ul>
-      <a href="second.html">Check the remote work project</a> 
-      <progress value="50" max="100"></progress>
     </div>
   </section>
   <article id="article">
@@ -34,8 +32,8 @@
   </article>
   <aside id="aside">
     <figure>
-      <img src="coronaparty.GIF" alt="woman and cat corona meme" />
-      <figcaption>Miscommunication in the time of corona</figcaption>
+      <img src="travel.GIF" alt="man hiking in the nature" />
+      <figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
     </figure>
   </aside>
 <footer id="footer">Here's the Footer and it's awesome</footer>
