--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav id="nav">
 <a href="index.html">Home Page</a>
 <a href="second.html">Work after corona</a>  
-<a href="third.html">Work after corona</a>
+<a href="third.html">Travel after corona</a>
 </nav>
   <section id="section">
     <h2>partyplanner's checklist</h2>
