--- a/third.html
+++ b/third.html
@@ -17,12 +17,12 @@
     <p class="borders">What to get.</p>
     <div class="borders">
       <ol>
-        <li>vodka</li>
-        <li>Beer</li>
+        <li>domestic travel</li>
+        <li>neighboring countries</li>
       </ol>
       <ul>
-        <li>Balalaika</li>
-        <li>Accordion</li>
+        <li>city vacation</li>
+        <li>Hit the beach!</li>
       </ul>
     </div>
   </section>
