--- a/third.html
+++ b/third.html
@@ -9,8 +9,9 @@
   <h1>Where to travel</h1>
 </header>
 <nav id="nav">
-<a href="index.html">Home Page</a>
-<a href="second.html">Work after corona</a>  
+  <ul>
+    <li><a href="index.html">Home Page</a></li>
+    <li><a href="second.html">Work after corona</a></li>
 </nav>
   <section id="section">
     <h2>traveller's checklist</h2>
