--- a/third.html
+++ b/third.html
@@ -13,6 +13,7 @@
     <li><a href="index.html">Home Page</a></li>
     <li><a href="second.html">Work after corona</a></li>
 </nav>
+<div id="slidetotheright">
   <section id="section">
     <h2>traveller's checklist</h2>
     <p class="borders">What to get.</p>
@@ -37,6 +38,8 @@
       <figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
     </figure>
   </aside>
-<footer id="footer">Here's the Footer and it's awesome</footer>
+  </div>
+  <footer id="footer">Here's the Footer and it's awesome</footer>
+
 </body>
 </html> 
