--- a/third.html
+++ b/third.html
@@ -5,7 +5,7 @@
   <title>Post-corona travel destination</title>
 </head>
 <body>
-<header>
+<header id="header">
   <h1>Where to travel</h1>
 </header>
 <nav id="nav">
