--- a/third.html
+++ b/third.html
@@ -5,41 +5,38 @@
   <title>Post-corona travel destination</title>
 </head>
 <body>
-<header id="header">
-  <h1>Where to travel</h1>
-</header>
-<nav id="nav">
-  <ul>
-    <li><a href="index.html">Home Page</a></li>
-    <li><a href="second.html">Work after corona</a></li>
-</nav>
-<div id="slidetotheright">
-  <section id="section">
-    <h2>traveller's checklist</h2>
-    <p class="borders">What to get.</p>
-    <div class="borders">
-      <ol>
-        <li>domestic travel</li>
-        <li>neighboring countries</li>
-      </ol>
-      <ul>
-        <li>city vacation</li>
-        <li>Hit the beach!</li>
-      </ul>
-    </div>
-  </section>
-  <article id="article">
-    <h2>Where to go</h2>
-    <p>It is going to be AWESOME</p>
-  </article>
-  <aside id="aside">
-    <figure>
-      <img src="travel.GIF" alt="man hiking in the nature" />
-      <figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
-    </figure>
-  </aside>
-  </div>
-  <footer id="footer">Here's the Footer and it's awesome</footer>
-
+	<header id="header">
+  		<h1>Where to travel</h1>
+	</header>
+	<nav id="nav">
+  		<ul>
+    			<li><a href="index.html">Home Page</a></li>
+    			<li><a href="second.html">Work after corona</a></li>
+	</nav>
+  	<section id="section">
+    		<h2>traveller's checklist</h2>
+    		<p class="borders">What to get.</p>
+      		<ol>
+        		<li>domestic travel</li>
+        		<li>neighboring countries</li>
+      		</ol>
+      		<ul>
+        		<li>city vacation</li>
+        		<li>Hit the beach!</li>
+      		</ul>
+    	</section>
+  	<div id=slidetotheright>
+		<article id="article">
+    			<h2>Where to go</h2>
+    			<p>It is going to be AWESOME</p>
+  		</article>
+  		<aside id="aside">
+    			<figure>
+      				<img src="travel.GIF" alt="man hiking in the nature" />
+      				<figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
+    			</figure>
+  		</aside>
+  	</div>
+	<footer id="footer">Here's the Footer and it's awesome</footer>
 </body>
 </html> 
