--- a/third.html
+++ b/third.html
@@ -14,7 +14,7 @@
     			<li><a href="second.html">Work after corona</a></li>
 		</ul>
 	</nav>
-	<div id=slidetotheright>
+	<div class="slidetotheright">
   		<section id="section">
     			<h2>traveller's checklist</h2>
     			<p class="borders">What to get.</p>
@@ -27,18 +27,21 @@
         			<li>Hit the beach!</li>
       			</ul>
     		</section>
-  
+	</div>
+  	<div class="slidetotheright">
 		<article id="article">
     			<h2>Where to go</h2>
     			<p>It is going to be AWESOME</p>
   		</article>
 	</div>
+	<div class="slidetotheright">
   		<aside id="aside">
     			<figure>
       				<img src="travel.GIF" alt="man hiking in the nature" />
       				<figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
     			</figure>
   		</aside>
+	</div>
 	<footer id="footer">Here's the Footer and it's awesome</footer>
 </body>
 </html> 
