--- a/third.html
+++ b/third.html
@@ -5,43 +5,42 @@
   <title>Post-corona travel destination</title>
 </head>
 <body>
-	<header id="header">
-  		<h1>Where to travel</h1>
-	</header>
-	<nav id="nav">
+<div class="header">
+  	<h1>Where to travel</h1>
+</div>
+<div class="clearfix">
+	<div class="column menu">
   		<ul>
     			<li><a href="index.html">Home Page</a></li>
     			<li><a href="second.html">Work after corona</a></li>
 		</ul>
-	</nav>
-	<div class="slidetotheright">
-  		<section id="section">
-    			<h2>traveller's checklist</h2>
-    			<p class="borders">What to get.</p>
-      			<ol>
-        			<li>domestic travel</li>
-        			<li>neighboring countries</li>
-      			</ol>
-      			<ul>
-        			<li>city vacation</li>
-        			<li>Hit the beach!</li>
-      			</ul>
-    		</section>
 	</div>
-  	<div class="slidetotheright">
-		<article id="article">
-    			<h2>Where to go</h2>
-    			<p>It is going to be AWESOME</p>
-  		</article>
+	<div class="column content">
+    		<h2>traveller's checklist</h2>
+    		<p>What to get.</p>
+      		<ol>
+        		<li>domestic travel</li>
+        		<li>neighboring countries</li>
+      		</ol>
+      		<ul>
+        		<li>city vacation</li>
+        		<li>Hit the beach!</li>
+      		</ul>
+    		
 	</div>
-	<div class="slidetotheright">
-  		<aside id="aside">
-    			<figure>
-      				<img src="travel.GIF" alt="man hiking in the nature" />
-      				<figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
-    			</figure>
-  		</aside>
+  	<div class="column content">
+    		<h2>Where to go</h2>
+    		<p>It is going to be AWESOME</p>
+  		
 	</div>
-	<footer id="footer">Here's the Footer and it's awesome</footer>
+	<div class="column content">
+ 		<figure>
+      			<img src="travel.GIF" alt="man hiking in the nature" />
+      			<figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
+    		</figure>
+  	</div>
+	<div class="footer">
+		<p>Here's the Footer and it's awesome</p>
+	</div>
 </body>
 </html> 
