--- a/third.html
+++ b/third.html
@@ -9,13 +9,13 @@
   	<h1>Where to travel</h1>
 </div>
 <div class="clearfix">
-	<div class="column menu">
+	<div class="sidebar menu">
   		<ul>
     			<li><a href="index.html">Home Page</a></li>
     			<li><a href="second.html">Work after corona</a></li>
 		</ul>
 	</div>
-	<div class="column content">
+	<div class="sidebar content">
     		<h2>traveller's checklist</h2>
     		<p>What to get.</p>
       		<ol>
@@ -28,12 +28,12 @@
       		</ul>
     		
 	</div>
-  	<div class="column content">
+  	<div class="sidebar content">
     		<h2>Where to go</h2>
     		<p>It is going to be AWESOME</p>
   		
 	</div>
-	<div class="column content">
+	<div class="sidebar content">
  		<figure>
       			<img src="travel.GIF" alt="man hiking in the nature" />
       			<figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
