--- a/third.html
+++ b/third.html
@@ -15,7 +15,7 @@
     			<li><a href="second.html">Work after corona</a></li>
 		</ul>
 	</div>
-	<div class="sidebar content">
+	<div class="content">
     		<h2>traveller's checklist</h2>
     		<p>What to get.</p>
       		<ol>
@@ -28,12 +28,12 @@
       		</ul>
     		
 	</div>
-  	<div class="sidebar content">
+  	<div class="content">
     		<h2>Where to go</h2>
     		<p>It is going to be AWESOME</p>
   		
 	</div>
-	<div class="sidebar content">
+	<div class="content">
  		<figure>
       			<img src="travel.GIF" alt="man hiking in the nature" />
       			<figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
