--- a/third.html
+++ b/third.html
@@ -28,12 +28,12 @@
       		</ul>
     		
 	</div>
-  	<div class="content">
+  	<div class="content rsidebar">
     		<h2>Where to go</h2>
     		<p>It is going to be AWESOME</p>
   		
 	</div>
-	<div class="content">
+	<div class="content rsidebar">
  		<figure>
       			<img src="travel.GIF" alt="man hiking in the nature" />
       			<figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
