--- a/third.html
+++ b/third.html
@@ -17,26 +17,26 @@
 	</div>
 	<div class="content">
     		<h2>traveller's checklist</h2>
-    		<p>What to get.</p>
+    		<p>what to remember</p>
       		<ol>
-        		<li>domestic travel</li>
-        		<li>neighboring countries</li>
+        		<li>Turun sinappi</li>
+        		<li>näggäri</li>
       		</ol>
       		<ul>
-        		<li>city vacation</li>
-        		<li>Hit the beach!</li>
+        		<li>Paratiisi on Tallinnan laivalla</li>
+        		<li>Mariella ja Cinderella on parkissa kesään saakka</li>
       		</ul>
     		
 	</div>
   	<div class="content rsidebar">
     		<h2>Where to go</h2>
-    		<p>It is going to be AWESOME</p>
+    		<p>wherever! It is going to be AWESOME!</p>
   		
 	</div>
 	<div class="content rsidebar">
  		<figure>
       			<img src="travel.GIF" alt="man hiking in the nature" />
-      			<figcaption>Everyone will travel to somewhere warm. Choose quiet instead.</figcaption>
+      			<figcaption>After some serious social distancing, why won't you enjoy a nice vacation in total isolation</figcaption>
     		</figure>
   	</div>
 	<div class="footer">
