--- a/third.html
+++ b/third.html
@@ -16,8 +16,8 @@
 		</ul>
 	</div>
 	<div class="content">
-    		<h2>traveller's checklist</h2>
-    		<p>what to remember</p>
+    		<h2>how to be the ultimate traveller</h2>
+    		<p>Tourists, don't bother</p>
       		<ol>
         		<li>Turun sinappi</li>
         		<li>näggäri</li>
