--- a/third.html
+++ b/third.html
@@ -22,6 +22,8 @@
         		<li>Turun sinappi</li>
         		<li>näggäri</li>
       		</ol>
+	</div>
+	<div class="content">
       		<ul>
         		<li>Paratiisi on Tallinnan laivalla</li>
         		<li>Mariella ja Cinderella on parkissa kesään saakka</li>
