--- a/third.html
+++ b/third.html
@@ -23,7 +23,7 @@
         		<li>näggäri</li>
       		</ol>
 	</div>
-	<div class="content">
+	<div class="content rsidebar">
       		<ul>
         		<li>Paratiisi on Tallinnan laivalla</li>
         		<li>Mariella ja Cinderella on parkissa kesään saakka</li>
