--- a/third.html
+++ b/third.html
@@ -15,7 +15,7 @@
     			<li><a href="second.html">Work after corona</a></li>
 		</ul>
 	</div>
-	<div class="content">
+	<div class="content rsidebar">
     		<h2>how to be the ultimate traveller</h2>
     		<p>Tourists, don't bother</p>
       		<ol>
