--- a/third.html
+++ b/third.html
@@ -30,10 +30,9 @@
       		</ul>
     		
 	</div>
-  	<div class="content rsidebar">
+  	<div class="content rsidebar border">
     		<h2>Where to go</h2>
     		<p>wherever! It is going to be AWESOME!</p>
-  		
 	</div>
 	<div class="content rsidebar">
  		<figure>
