--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <figcaption>Miscommunication in the time of corona</figcaption>
     </figure>
   </aside>
-<footer id="footer">Here's the Footer and it's awesome</footer>
+<footer class="footer">Here's the Footer and it's awesome</footer>
 </body>
 </html> 
